...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordLogin"
        tools:ignore="TextSizeCheck" />

    <TextView
        android:id="@+id/crearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/CrearCuentaLogin"
        android:textColor="#3F51B5"
        android:textSize="17sp"
...
